[package]
name = "mogger"
description = "Simple blogging engine"
repository = "https://github.com/agraven/mogger"
homepage = "https://amandag.net"
license = "AGPL-3.0-or-later"
version = "0.1.18"
authors = ["Amanda P. Graven <amanda@amandag.net>"]
edition = "2018"
readme = "README.md"

[profile.release]
lto = true

[dependencies]
askama = "0.9"
base64 = "0.13"
bcrypt = "0.9"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.9"
cookie = { version = "0.14", features = ["percent-encode"] }
diesel = { version = "1.4", features = ["chrono", "postgres"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
diesel_migrations = "1.4"
failure = "0.1.6"
futures = "0.3"
gotham = "0.5.0"
gotham_derive = "0.5.0"
mime = "0.3"
rand = "0.8"
rss = { version = "1.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.9"
time = "0.2"
toml = "0.5"

[package.metadata.deb]
name = "mogger"
extended-description = "A blogging engine written in rust built for running the site amandag.net."
depends = "$auto, adduser"
section = "web"
priority = "optional"
maintainer-scripts = "debian"
conf-files = ["/etc/mogger/mogger.toml"]
assets = [
	["target/release/mogger", "usr/bin/", "755"],
	["static/*", "usr/share/mogger/", "644"],
	["static/fonts/*", "usr/share/mogger/fonts/", "644"],
	["debian/mogger.service", "lib/systemd/system/", "644"],
	["mogger.toml", "etc/mogger/mogger.toml", "644"],
	["README.md", "usr/share/doc/mogger/README", "644"],
	["debian/copyright", "usr/share/doc/mogger/copyright", "644"]
]
